--- a/app/src/main/res/layout/activity_profile_new.xml
+++ b/app/src/main/res/layout/activity_profile_new.xml
@@ -52,7 +52,8 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:background="@drawable/circle_background"
-                    android:visibility="gone"
+                    android:visibility="visible"
+                    android:src="@drawable/rl_profile"
                     android:layout_gravity="center" />
 
                 <!-- First Letter -->
@@ -64,6 +65,7 @@
                     android:gravity="center"
                     android:text="K"
                     android:textColor="@color/black"
+                    android:visibility="gone"
                     android:textStyle="bold"
                     android:textSize="36sp" />
 
