--- a/app/src/main/res/layout/activity_profile_settings.xml
+++ b/app/src/main/res/layout/activity_profile_settings.xml
@@ -69,7 +69,8 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:background="@drawable/circle_background"
-                    android:visibility="gone"
+                    android:visibility="visible"
+                    android:src="@drawable/rl_profile"
                     android:layout_gravity="center" />
 
                 <!-- First Letter -->
@@ -81,6 +82,7 @@
                     android:gravity="center"
                     android:text="K"
                     android:textColor="@color/white"
+                    android:visibility="gone"
                     android:textStyle="bold"
                     android:textSize="36sp" />
             </FrameLayout>
