--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -1557,6 +1557,7 @@
                                 android:paddingBottom="10dp"
                                 android:background="@drawable/white_grey_meal_bg"
                                 android:layout_weight="5"
+                                android:layout_marginEnd="5dp"
                                 android:id="@+id/lyt_breathing_1"
                                 android:orientation="vertical">
 
