--- a/app/src/main/res/layout/activity_new_sleep_sound.xml
+++ b/app/src/main/res/layout/activity_new_sleep_sound.xml
@@ -101,7 +101,7 @@
                             android:layout_width="match_parent"
                             android:orientation="vertical"
                             android:id="@+id/layoutNewRelease"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:layout_height="wrap_content">
 
                             <LinearLayout
