--- a/app/src/main/res/layout/row_ranges_face_scan_details.xml
+++ b/app/src/main/res/layout/row_ranges_face_scan_details.xml
@@ -16,8 +16,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Normal"
-            android:textSize="20sp"
+            android:textSize="@dimen/textsize_large18sp"
             android:textStyle="bold"
+            android:fontFamily="@font/merriweather_bold"
             android:layout_weight="1" />
 
         <LinearLayout
@@ -44,7 +45,7 @@
         android:text="60-100 bpm"
         android:textSize="12sp"
         android:padding="8dp"
-        android:textColor="@color/text_color_app"
+        android:textColor="@color/white"
         android:fontFamily="@font/dmsans_bold"
         android:background="@drawable/bg_rounded_green"
         android:layout_marginTop="8dp" />
