--- a/app/src/main/res/layout/health_cam_vitals_item.xml
+++ b/app/src/main/res/layout/health_cam_vitals_item.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        app:cardCornerRadius="@dimen/margin_card_16dp"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:id="@+id/rl_main_bg"
-        android:background="@drawable/roundedcornerbutton"
         android:elevation="4dp"
+        android:background="@color/gray_light_bg"
         android:backgroundTint="@color/rightlife">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:background="@drawable/roundedcornerbutton"
+            android:background="@color/gray_light_bg"
             android:backgroundTint="@color/white">
 
             <ImageView
@@ -92,8 +96,8 @@
             android:layout_alignParentEnd="true"
             android:rotation="-45"
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:layout_height="wrap_content" />
     </RelativeLayout>
-
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
