--- a/app/src/main/res/layout/dialog_mindfulness_review.xml
+++ b/app/src/main/res/layout/dialog_mindfulness_review.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/close"
+        android:src="@drawable/close_breathwork"
         />
     <TextView
         android:layout_width="wrap_content"
