--- a/app/src/main/res/layout/dialog_sleep_info.xml
+++ b/app/src/main/res/layout/dialog_sleep_info.xml
@@ -33,7 +33,7 @@
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/close"
+                android:src="@drawable/close_breathwork"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
