--- a/app/src/main/res/layout/fragment_meal_summary_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_meal_summary_info_bottom_sheet.xml
@@ -25,7 +25,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/close_journal"
+        android:src="@drawable/close_breathwork"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
