Bug Fixes RAD-5712 RAD-5788 RAD-5789 RAD-5521 RAD-5436 RAD-5786 RAD-5782 RAD-5781 RAD-5780 RAD-5779 RAD-5775 RAD-5763 RAD-5756

--- a/app/src/main/res/layout/activity_profile_new.xml
+++ b/app/src/main/res/layout/activity_profile_new.xml
@@ -227,8 +227,9 @@
                     android:id="@+id/arrowAge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow_journal"
-                    android:layout_gravity="end" />
+
+                    android:src="@drawable/next_arrow_settings"
+                    android:layout_gravity="center_vertical" />
             </LinearLayout>
 
             <!-- Gender -->
@@ -267,7 +268,8 @@
                     android:id="@+id/arrowGender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow_journal" />
+                    android:src="@drawable/next_arrow_settings"
+                    android:layout_gravity="center_vertical" />
             </LinearLayout>
 
             <!-- Height -->
@@ -304,7 +306,8 @@
                     android:id="@+id/arrowHeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow_journal" />
+                    android:src="@drawable/next_arrow_settings"
+                    android:layout_gravity="center_vertical" />
             </LinearLayout>
 
             <!-- Weight -->
@@ -341,7 +344,8 @@
                     android:id="@+id/arrowWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow_journal" />
+                    android:src="@drawable/next_arrow_settings"
+                    android:layout_gravity="center_vertical" />
             </LinearLayout>
 
             <!-- Delete Account -->
@@ -370,7 +374,8 @@
                     android:id="@+id/arrowDeleteAccount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow_journal" />
+                    android:src="@drawable/next_arrow_settings"
+                    android:layout_gravity="center_vertical" />
             </LinearLayout>
 
         </LinearLayout>
