--- a/app/src/main/res/layout/activity_account_privacy_new.xml
+++ b/app/src/main/res/layout/activity_account_privacy_new.xml
@@ -24,9 +24,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Integrations"
+            android:text="Account Privacy"
             android:textSize="18sp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
             android:layout_marginStart="4dp" />
     </LinearLayout>
