--- a/app/src/main/res/layout/row_subscription_history.xml
+++ b/app/src/main/res/layout/row_subscription_history.xml
@@ -13,12 +13,12 @@
         android:padding="16dp">
 
         <ImageView
+            android:id="@+id/img_download"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/trialEnds"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_download_pastsub"
-            android:id="@+id/img_download"
             android:visibility="visible" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:paddingHorizontal="16dp"
             android:paddingVertical="5dp"
             android:text="Current Plan"
-            android:textColor="@color/white"
+            android:textColor="@color/chip_selected_text_color"
             android:textSize="12sp" />
 
         <TextView
@@ -42,8 +42,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginVertical="8dp"
+            android:layout_toLeftOf="@+id/tvCurrentPlan"
             android:fontFamily="@font/dmsans_bold"
             android:text="Annual Plan"
+
             android:textColor="@color/txt_color_mind"
             android:textSize="20sp" />
 
