--- a/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
@@ -232,6 +232,7 @@
             android:gravity="left"
             android:layout_marginTop="10dp"
             android:padding="10dp"
+            android:maxLength="300"
             android:layout_marginBottom="20dp"
             android:background="@color/border_line"
             android:theme="@style/CustomRatingBar"
@@ -249,9 +250,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center"
             android:textSize="14sp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/gray_past_price"
             android:fontFamily="@font/dmsans_regular"
-            android:text="0000 Character"/>
+            android:text="0/300 Characters"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layoutBtn"
