--- a/app/src/main/res/layout/fragment_snap_meal.xml
+++ b/app/src/main/res/layout/fragment_snap_meal.xml
@@ -24,6 +24,7 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Snap Meal"
