RAD-5454 RAD-5532 RAD-5522 RAD-5538 RAD-5571 RAD-5572 RAD-5578 RAD-5577 RAD-5519 RAD-5556 RAD-5581 RAD-5568 RAD-5658 RAD-5659 RAD-5831 RAD-5824 RAD-5823 RAD-5818 RAD-5826 RAD-5808 RAD-5807 RAD-5806 RAD-5805 RAD-5804 RAD-5801 RAD-5799 RAD-5798 RAD-5792 RAD-5758 RAD-5750 RAD-5745 RAD-5737 RAD-5736 RAD-5732 RAD-5727 RAD-5718 RAD-5717 RAD-5716

--- a/app/src/main/res/layout/activity_enable_notification.xml
+++ b/app/src/main/res/layout/activity_enable_notification.xml
@@ -8,18 +8,23 @@
         android:id="@+id/scollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_card_16dp"
         android:fillViewport="true">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view_consistency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:elevation="16dp"
-            app:cardCornerRadius="25dp">
+
+            android:elevation="0dp"
+            app:cardBackgroundColor="@color/gray_light_bg"
+            app:cardCornerRadius="0dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:background="@drawable/toproundedcornershape"
+                android:backgroundTint="@color/white"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content">
 
                 <ImageView
