--- a/app/src/main/res/layout/activity_facial_scan_report_details.xml
+++ b/app/src/main/res/layout/activity_facial_scan_report_details.xml
@@ -137,6 +137,7 @@
                                 android:textColor="@color/black"
                                 android:background="@drawable/tab_background_report_detail"
                                 android:gravity="center"
+                                android:checked="false"
                                 android:button="@null" />
 
                             <!--<RadioButton
