--- a/app/src/main/res/layout/activity_content_details.xml
+++ b/app/src/main/res/layout/activity_content_details.xml
@@ -278,7 +278,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_bold"
                     android:padding="16dp"
-                    android:text="You May Also Like"
+                    android:text="Recommended for you"
                     android:textColor="@color/text_color_app"
                     android:textSize="16sp"
                     android:layout_alignParentStart="true" />
