--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -236,7 +236,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_marginStart="16dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_marginBottom="@dimen/margin_card_16dp"
                         android:layout_marginEnd="16dp">
 
