--- a/app/src/main/res/layout/activity_preparing_export_health_data.xml
+++ b/app/src/main/res/layout/activity_preparing_export_health_data.xml
@@ -89,7 +89,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You’ll receive a copy in your mailbox within\n 24-48 hours—keep an eye out!"
+            android:text="You’ll receive a copy in your mailbox within\n 24-48 hours,keep an eye out!"
             android:fontFamily="@font/dmsans_regular"
             android:layout_marginVertical="12dp"
             android:textColor="@color/txt_color_header"
