--- a/app/src/main/res/layout/activity_profile_new.xml
+++ b/app/src/main/res/layout/activity_profile_new.xml
@@ -385,13 +385,13 @@
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:text="Save"
         android:backgroundTint="@color/menuselected"
         android:textColor="@color/white"
         android:layout_margin="16dp"
-        android:fontFamily="@font/dmsans_regular"
+        android:fontFamily="@font/dmsans_bold"
         android:textSize="18sp"
-        android:padding="12dp"
+        android:gravity="center"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
