--- a/app/src/main/res/layout/bottomsheet_awake_night.xml
+++ b/app/src/main/res/layout/bottomsheet_awake_night.xml
@@ -1,5 +1,6 @@
 <!-- res/layout/bottom_sheet_layout.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ripleffect="http://schemas.android.com/apk/res-auto"
     android:id="@+id/design_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -49,8 +50,9 @@
             android:layout_weight="1"
             android:textSize="16sp"
             android:fontFamily="@font/dmsans_bold"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/menuselected" />
+            android:textColor="@color/black"
+            ripleffect:rippleColor="@color/menuselected"
+            android:backgroundTint="@color/color_bg_button_affirmed" />
 
     </LinearLayout>
 </LinearLayout>
