--- a/app/src/main/res/layout/bottomsheet_breathwork_context.xml
+++ b/app/src/main/res/layout/bottomsheet_breathwork_context.xml
@@ -7,10 +7,11 @@
     android:background="@drawable/toproundedcornershape"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
+        android:paddingBottom="@dimen/margin_card_16dp"
         tools:ignore="UselessParent">
 
         <ImageView
@@ -37,7 +38,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_below="@id/tvTitle"
-            android:layout_margin="20dp">
+            android:layout_above="@+id/btnContinue"
+            android:layout_margin="10dp">
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPagerBreathWork"
@@ -64,8 +66,78 @@
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/custom_breathing_card_color_text"
             android:backgroundTint="@color/custom_breathing_card_color"
-            android:layout_below="@id/ll_view_pager" />
+            android:layout_alignParentBottom="true" />
 
-    </RelativeLayout>
+    </RelativeLayout>-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="@dimen/margin_card_16dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:paddingBottom="@dimen/margin_card_16dp"
+            tools:ignore="UselessParent">
+
+        <ImageView
+            android:id="@+id/ivDialogClose"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/close_breathwork" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/merriweather_bold"
+            android:text="Custom"
+            android:textColor="@color/txt_color_header"
+            android:textSize="20sp" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPagerBreathWork"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="1dp" />
+
+            <com.zhpan.bannerview.indicator.DrawableIndicator
+                android:id="@+id/indicator_view_pager1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnContinue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginBottom="32dp"
+            android:text="Continue"
+            android:textSize="16sp"
+            android:fontFamily="@font/dmsans_bold"
+            android:textColor="@color/custom_breathing_card_color_text"
+            android:backgroundTint="@color/custom_breathing_card_color" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
