--- a/app/src/main/res/layout/popup_vitals.xml
+++ b/app/src/main/res/layout/popup_vitals.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_card_16dp"
+    android:backgroundTint="@color/white"
     android:background="@drawable/rounded_corder_border_gray">
 
     <TextView
