--- a/app/src/main/res/layout/row_jump_back_in.xml
+++ b/app/src/main/res/layout/row_jump_back_in.xml
@@ -18,13 +18,13 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="150dp">
 
                 <ImageView
                     android:id="@+id/item_image"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop"
+                    android:layout_height="150dp"
+                    android:scaleType="fitXY"
                     android:src="@drawable/facial_scan" />
 
                 <LinearLayout
