--- a/app/src/main/res/layout/row_stress_management.xml
+++ b/app/src/main/res/layout/row_stress_management.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:fontFamily="@font/dmsans_regular"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Visualise and Manifest"
             android:textColor="@color/txt_color_header"
             android:textSize="20sp" />
