--- a/app/src/main/res/layout/activity_newhealthcamreport.xml
+++ b/app/src/main/res/layout/activity_newhealthcamreport.xml
@@ -248,12 +248,14 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                android:id="@+id/tv_time_to_checkin"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/margin_card_16dp"
                                 android:fontFamily="@font/dmsans_bold"
                                 android:textSize="@dimen/textsize_large"
-                                android:text="Time For A Check-In! It’s Been A While Since Your Last Face Scan." />
+                                android:text="You’ve used your trial scan.
+for more, Explore our plan." />
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
@@ -264,7 +266,7 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:orientation="horizontal"
-                                    android:layout_toStartOf="@+id/img_lastfacescan_arrow"
+                                    android:id="@+id/ll_date_time"
                                     android:layout_margin="5dp"
                                     android:layout_height="wrap_content">
 
@@ -277,15 +279,6 @@
                                         android:layout_height="wrap_content" />
                                 </LinearLayout>
 
-                                <ImageView
-                                    android:id="@+id/img_lastfacescan_arrow"
-                                    android:layout_width="wrap_content"
-                                    android:src="@drawable/ic_mindaudit_rlpage_arrow_red"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_marginEnd="20dp"
-                                    android:layout_centerVertical="true"
-                                    android:visibility="visible"
-                                    android:layout_height="wrap_content" />
                             </RelativeLayout>
 
                         </LinearLayout>
@@ -303,7 +296,7 @@
                         android:background="@drawable/bg_gray_border"
                         android:backgroundTint="#FD6967"
                         android:gravity="center"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="horizontal">
 
 
@@ -415,6 +408,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="@dimen/margin_card_16dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -438,6 +432,7 @@
                 android:layout_width="wrap_content"
                 android:text="Vitals"
                 android:layout_marginStart="@dimen/margin_card_16dp"
+                android:layout_marginTop="@dimen/margin_card_16dp"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/merriweather_bold"
                 android:textSize="@dimen/textsize_large"
